Added : 3 model classes. Changed Gare is not a Extended class of Commune anymore. new file:   .vscode/settings.json new file:   src/model/Commune.java new file:   src/model/Departement.java new file:   src/model/Gare.java modified:   ws/batman.bat